tests/machine/x/c/left_join_multi.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/left_join_multi.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/left_join_multi.c:95:7: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
   95 |       result_item_list_t_create(orders.len * customers.len * items.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/left_join_multi.c:95:7: error: invalid initializer
/workspace/mochi/tests/machine/x/c/left_join_multi.c:130:9: warning: implicit declaration of function ‘memcmp’ [-Wimplicit-function-declaration]
  130 |     if (memcmp(&r.item, &(item_t){0}, sizeof(item_t)) == 0) {
      |         ^~~~~~
/workspace/mochi/tests/machine/x/c/left_join_multi.c:4:1: note: include ‘<string.h>’ or provide a declaration of ‘memcmp’
    3 | #include <stdlib.h>
  +++ |+#include <string.h>
    4 | 

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:50Z
